--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
 # Astro Runtime includes the following pre-installed providers packages: https://docs.astronomer.io/astro/runtime-image-architecture#provider-packages
+apache-airflow-providers-amazon==8.5.1 # 7.4.1
+log-generator==1.0.2
+Faker
+apache-airflow-providers-postgres==5.6.0
+astronomer-providers==1.17.3
