--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: b2b
     volumes:
-      - ./init-scripts/init-b2bdb.sql:/docker-entrypoint-initdb.d/init-b2bdb.sql
+      - ./init-scripts/init_b2bdb.sql:/docker-entrypoint-initdb.d/init_b2bdb.sql
       - ./init-scripts/:/docker-entrypoint-initdb.d/
     restart: always
     container_name: b2bdb
@@ -20,3 +20,25 @@ services:
       retries: 5
     networks:
       - airflow
+
+  scheduler:
+    volumes:
+      - ./dbt:/usr/local/airflow/dbt:rw
+
+  webserver:
+    volumes:
+      - ./dbt:/usr/local/airflow/dbt:rw
+
+  triggerer:
+    volumes:
+      - ./dbt:/usr/local/airflow/dbt:rw
+
+  metabase:
+    image: metabase/metabase:v0.46.6.4
+    volumes:
+      - ./include/metabase-data:/metabase-data
+    environment:
+      - MB_DB_FILE=/metabase-data/metabase.db
+    ports:
+      - 3000:3000
+    restart: always
