Update .env _sample

--- a/.env _sample
+++ b/.env _sample
@@ -20,10 +20,5 @@ APPDB_HOST=b2bdb
 APPDB_DATABASE=b2bdb
 
 DBT_PROFILES_DIR=/usr/local/airflow/dags/dbt/b2bdw
-ACCESS_KEY_ID=AKIAYQO2EQBMKY7CNUDY
-SECRET_ACCESS_KEY=U51IAff/RkLJnIvq/EPxe63YC7rbOzXi4CUtj45p
-AIRFLOW_CONN_AWS_DEFAULT='{
-  "conn_type": "aws",
-  "login": "AKIAYQO2EQBMKY7CNUDY",
-  "password": "U51IAff/RkLJnIvq/EPxe63YC7rbOzXi4CUtj45p"
-}'
+ACCESS_KEY_ID=
+SECRET_ACCESS_KEY=
